--- a/DataMining/Jerry_Boosting.ipynb
+++ b/DataMining/Jerry_Boosting.ipynb
@@ -47,7 +47,7 @@
       "Cleaned outliers !\n",
       "Imputed Missing Values\n",
       "One hot encodings done!\n",
-      "Total Time:  7.21435885032018  minutes\n"
+      "Total Time:  9.702874823411305  minutes\n"
      ]
     }
    ],
@@ -76,14 +76,32 @@
    "outputs": [],
    "source": [
     "X=df.drop(\"price\",axis=1)\n",
-    "y=df['price']\n",
-    "\n",
-    "#data_matrix=xgb.DMatrix(data=X, label=y)"
+    "y=df['price']"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(388335, 102)"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,32 +119,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "MSE on train set: 2838661.113233323\n",
-      "RMSE on train set: 1684.832666241168\n",
+      "MSE on train set: 1681400.0488783927\n",
+      "RMSE on train set: 1296.6881077878338\n",
       "\n",
-      "MSE on test set:  19441137.871776145\n",
-      "RMSE on test set:  4409.2105724013845\n"
+      "MSE on test set:  18506914.684563376\n",
+      "RMSE on test set:  4301.966374178601\n"
      ]
     }
    ],
    "source": [
     "import xgboost as xgb\n",
     "\n",
-    "xgb_reg = xgb.XGBRegressor(learning_rate = 0.1, \n",
+    "model = xgb.XGBRegressor(learning_rate = 0.1, \n",
     "                           max_depth = 20, \n",
     "                           alpha = 10, \n",
     "                           n_estimators = 200)\n",
     "\n",
-    "xgb_reg.fit(X_train,y_train)\n",
-    "preds_train= xgb_reg.predict(X_train)\n",
-    "preds_test = xgb_reg.predict(X_test)\n",
+    "model.fit(X_train,y_train)\n",
+    "preds_train= model.predict(X_train)\n",
+    "preds_test = model.predict(X_test)\n",
     "\n",
     "\n",
     "print(f\"MSE on train set: {mean_squared_error(y_train, preds_train)}\")\n",
@@ -134,6 +152,70 @@
     "print()\n",
     "print(f\"MSE on test set:  {mean_squared_error(y_test, preds_test)}\")\n",
     "print(f\"RMSE on test set:  {mean_squared_error(y_test, preds_test)**0.5}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[-4539.40832934 -4530.79744298 -4562.29798048 -4540.67763391\n",
+      " -4538.37326659]\n",
+      "RMSE CV: 4542.3109306609185\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.model_selection import cross_val_score\n",
+    "\n",
+    "model = xgb.XGBRegressor(learning_rate = 0.1, \n",
+    "                           max_depth = 20, \n",
+    "                           alpha = 10, \n",
+    "                           n_estimators = 200)\n",
+    "\n",
+    "cv_score=cross_val_score(model, X_train, y_train, cv=5, scoring=\"neg_root_mean_squared_error\")\n",
+    "\n",
+    "\n",
+    "print(cv_score)\n",
+    "print(\"RMSE CV:\", -np.mean(cv_score))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MSE on train set: 1680198.6649892374\n",
+      "RMSE on train set: 1296.224774099476\n",
+      "\n",
+      "MSE on test set:  18494230.29625137\n",
+      "RMSE on test set:  4300.491866781214\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Set the lowest predicted value to zero (negative predicted values make no sense for price)\n",
+    "import copy\n",
+    "\n",
+    "preds_train2 = copy.copy(preds_train)\n",
+    "preds_test2 = copy.copy(preds_test)\n",
+    "\n",
+    "preds_train2[preds_train2 < 0] = 0\n",
+    "preds_test2[preds_test2 < 0] = 0\n",
+    "\n",
+    "print(f\"MSE on train set: {mean_squared_error(y_train, preds_train2)}\")\n",
+    "print(f\"RMSE on train set: {mean_squared_error(y_train, preds_train2)**0.5}\")\n",
+    "print()\n",
+    "print(f\"MSE on test set:  {mean_squared_error(y_test, preds_test2)}\")\n",
+    "print(f\"RMSE on test set:  {mean_squared_error(y_test, preds_test2)**0.5}\")"
    ]
   },
   {
@@ -145,20 +227,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[LightGBM] [Warning] Find whitespaces in feature_names, replace with underlines\n",
-      "[LightGBM] [Warning] Auto-choosing row-wise multi-threading, the overhead of testing was 0.022029 seconds.\n",
-      "You can set `force_row_wise=true` to remove the overhead.\n",
-      "And if memory is not enough, you can set `force_col_wise=true`.\n",
-      "[LightGBM] [Info] Total Bins 1053\n",
-      "[LightGBM] [Info] Number of data points in the train set: 310668, number of used features: 100\n",
-      "[LightGBM] [Info] Start training from score 14235.128269\n",
       "MSE on train set: 1450707.5653418957\n",
       "RMSE on train set: 1204.4532225627925\n",
       "\n",
@@ -169,18 +244,17 @@
    ],
    "source": [
     "import lightgbm as lgb\n",
-    "train_data=lgb.Dataset(X_train,y_train)\n",
     "\n",
+    "model=lgb.LGBMRegressor(learning_rate=0.1,\n",
+    "                        boosting_type=\"gbdt\",  \n",
+    "                        objective=\"regression\",\n",
+    "                        metric=\"mse\",\n",
+    "                        num_leaves=2000,\n",
+    "                        max_depth=40,\n",
+    "                        n_estimators=1000)\n",
     "\n",
+    "model.fit(X_train, y_train)\n",
     "\n",
-    "lgbm_params={\"learning_rate\":0.1,\n",
-    "             \"boosting_type\":\"gbdt\",  \n",
-    "             \"objective\":\"regression\",\n",
-    "             \"metric\":\"mse\",\n",
-    "             \"num_leaves\":2000,\n",
-    "             \"max_depth\":40}\n",
-    "\n",
-    "model=lgb.train(lgbm_params, train_data, 1000) \n",
     "preds_train=model.predict(X_train)\n",
     "preds_test=model.predict(X_test)\n",
     "\n",
@@ -190,6 +264,72 @@
     "print()\n",
     "print(f\"MSE on test set:  {mean_squared_error(y_test, preds_test)}\")\n",
     "print(f\"RMSE on test set:  {mean_squared_error(y_test, preds_test)**0.5}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[-6575.27742835 -5899.6527421  -5654.14243284 -6246.97119738\n",
+      " -7012.66697976]\n",
+      "RMSE CV: 6277.742156086253\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.model_selection import cross_val_score\n",
+    "\n",
+    "model=lgb.LGBMRegressor(learning_rate=0.1,\n",
+    "                        boosting_type=\"gbdt\",  \n",
+    "                        objective=\"regression\",\n",
+    "                        metric=\"mse\",\n",
+    "                        num_leaves=2000,\n",
+    "                        max_depth=40,\n",
+    "                        n_estimators=1000)\n",
+    "\n",
+    "cv_score=cross_val_score(model, X, y, cv=5, scoring=\"neg_root_mean_squared_error\")\n",
+    "\n",
+    "print(cv_score)\n",
+    "print(\"RMSE CV:\", -np.mean(cv_score))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MSE on train set: 1444229.6646083477\n",
+      "RMSE on train set: 1201.761068019907\n",
+      "\n",
+      "MSE on test set:  17726394.436102573\n",
+      "RMSE on test set:  4210.272489531119\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Set the lowest predicted value to zero (negative predicted values make no sense for price)\n",
+    "import copy\n",
+    "\n",
+    "preds_train2 = copy.copy(preds_train)\n",
+    "preds_test2 = copy.copy(preds_test)\n",
+    "\n",
+    "preds_train2[preds_train2 < 0] = 0\n",
+    "preds_test2[preds_test2 < 0] = 0\n",
+    "\n",
+    "print(f\"MSE on train set: {mean_squared_error(y_train, preds_train2)}\")\n",
+    "print(f\"RMSE on train set: {mean_squared_error(y_train, preds_train2)**0.5}\")\n",
+    "print()\n",
+    "print(f\"MSE on test set:  {mean_squared_error(y_test, preds_test2)}\")\n",
+    "print(f\"RMSE on test set:  {mean_squared_error(y_test, preds_test2)**0.5}\")"
    ]
   },
   {
